# p1-reader

./: build.sh  docker-compose.yml
battery-sim/: Cargo.toml
battery-sim/src/: main.rs
grid-meter/: Cargo.toml
grid-meter-test/: Cargo.toml
grid-meter-test/src/: main.rs
grid-meter/src/: lib.rs
reader/: .env  Cargo.toml  Dockerfile
reader/migrations/: 20240428201852_initial.down.sql  20240428201852_initial.up.sql
reader/src/: main.rs
solar-reader/: .env  Cargo.toml  Dockerfile
solar-reader/migrations/: 20250622093312_initial.down.sql  20250622093312_initial.up.sql  20250622131820_temperature-real.down.sql  20250622131820_temperature-real.up.sql
solar-reader/src/: main.rs
