[package]
name = "reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
dsmr5 = "0.4.0"
serialport = "4.3.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.0", features = ["rt", "sync", "macros"] }

[profile.dev]
codegen-units = 1

[profile.release]
codegen-units = 1
