[package]
name = "reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
dotenvy = "0.15.7"
dsmr5 = "0.4.0"
serialport = "4.8.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.48.0", features = ["rt", "sync", "macros"] }
tokio-modbus = { version = "0.17.0", default-features = false, features = ["tcp-server"] }
grid-meter = { path = "../grid-meter" }