[package]
name = "solar-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
backoff = { version = "0.4.0", default-features = false }
chrono = "0.4.38"
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["rt", "sync", "macros"] }
tokio-modbus = { version = "0.16.1", default-features = false, features = ["tcp"] }
grid-meter = { path = "../grid-meter" }
